fix spacing between multiselect selected chips

--- a/client/src/styles/Multiselect.scss
+++ b/client/src/styles/Multiselect.scss
@@ -42,8 +42,6 @@
   .chip {
     padding: 4px 10px;
     background: #0096fb;
-    margin-right: 5px;
-    margin-bottom: 5px;
     border-radius: 11px;
     display: inline-flex;
     align-items: center;
