--- a/client/src/styles/PortfolioFilters.scss
+++ b/client/src/styles/PortfolioFilters.scss
@@ -341,7 +341,7 @@
           .selectedListContainer {
             display: flex;
             flex-wrap: wrap;
-            gap: 0.4rem;
+            gap: 0.6rem;
 
             .chip {
               align-self: flex-start;
